--- a/TestSIOS/index.html
+++ b/TestSIOS/index.html
@@ -1,1 +1,154 @@
-<html>test</html>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <title> G.A.Z.</title>
+	<meta charset="utf-8" />
+    <style type="text/css">
+        .auto-style1 {
+            height: 538px;
+            background-color: #FFFFFF;
+            width: 751px;
+        }
+        .auto-style2 {
+            height: 119px;
+            font-size: xx-large;
+        }
+        .auto-style4 {
+            text-align: center;
+            color: #FFFFFF;
+        }
+        #Button1 {
+            height: 20px;
+            width: 86px;
+            font-size: xx-small;
+            margin-top: 6px;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button2 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button3 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button4 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button5 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button6 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+        }
+        #Button7 {
+            font-size: xx-small;
+            color: #FFFFFF;
+            background-color: #666666;
+            margin-bottom: 0px;
+        }
+        .auto-style5 {
+            height: 120px;
+        }
+        .auto-style6 {
+            background-color: #666666;
+        }
+        .auto-style7 {
+            height: 532px;
+            text-align: center;
+            width: 752px;
+        }
+        #Button8 {
+            font-size: large;
+            color: #3366FF;
+            background-color: #FFFFFF;
+        }
+        #Button9 {
+            margin-top: 13px;
+            font-size: large;
+            color: #3366FF;
+            background-color: #FFFFFF;
+        }
+        .auto-style11 {
+            width: 259px;
+            height: 182px;
+            margin-top: 0px;
+        }
+        .auto-style14 {
+            width: 258px;
+            height: 187px;
+        }
+        .auto-style20 {
+            height: 96px;
+            width: 310px;
+        }
+        .auto-style25 {
+            width: 100%;
+            height: 430px;
+        }
+        .auto-style26 {
+            height: 202px;
+            width: 446px;
+        }
+        .auto-style27 {
+            width: 348px;
+            height: 205px;
+        }
+        .auto-style28 {
+            width: 310px;
+            height: 202px;
+        }
+        .auto-style30 {
+            text-align: left;
+            font-size: x-small;
+        }
+    </style>
+</head>
+<body class="auto-style1" style="width: 756px; height: 715px">
+    <div class="auto-style6">
+
+    <div class="auto-style2">
+        <div class="auto-style5">
+        <p class="auto-style4">
+            <input id="Button1" type="button" value="Strona główna" />
+            <input id="Button2" type="button" value="Impreza" />
+            <input id="Button3" type="button" value="Wojsko" />
+            <input id="Button4" type="button" value="Wydarzenia naukowe" />
+            <input id="Button5" type="button" value="Tagi Pracy" />
+            <input id="Button6" type="button" value="Dodaj wydarzenie" />
+            <input id="Button7" type="button" value="Opinia o wydarzeniu" />
+            </p>
+            <p class="auto-style4">
+                <strong>G.A.Z. - Imprezy i wydarzenia studenckie</strong></p>
+        </div>
+        <div class="auto-style7">
+            &nbsp;<input id="Button8" type="button" value="Zaloguj się!" /><input id="Button9" type="button" value="Zarejestruj się!" />
+            <table class="auto-style25">
+                <tr>
+                    <td class="auto-style28">
+                        <img alt="" class="auto-style11" src="images/wojsko.jpg" /></td>
+                    <td class="auto-style26">
+                        <img alt="" class="auto-style27" src="images/impreza.jpg" /></td>
+                </tr>
+                <tr>
+                    <td class="auto-style20">
+                        <img alt="" class="auto-style14" src="images/naukowe.jpg" /></td>
+                </tr>
+            </table>
+            <div class="auto-style30">
+                Zalogowany jako: </div>
+        </div>
+    </div>
+        </div>
+
+</body>
+</html>
