--- a/TestSIOS/index.html
+++ b/TestSIOS/index.html
@@ -87,10 +87,6 @@
             width: 258px;
             height: 187px;
         }
-        .auto-style20 {
-            height: 96px;
-            width: 310px;
-        }
         .auto-style25 {
             width: 100%;
             height: 430px;
@@ -100,8 +96,8 @@
             width: 446px;
         }
         .auto-style27 {
-            width: 348px;
-            height: 205px;
+            width: 323px;
+            height: 209px;
         }
         .auto-style28 {
             width: 310px;
@@ -111,7 +107,11 @@
             text-align: left;
             font-size: x-small;
         }
-    </style>
+        .auto-style31 {
+            width: 299px;
+            height: 212px;
+            }
+        </style>
 </head>
 <body class="auto-style1" style="width: 756px; height: 715px">
     <div class="auto-style6">
@@ -123,7 +123,7 @@
             <input id="Button2" type="button" value="Impreza" />
             <input id="Button3" type="button" value="Wojsko" />
             <input id="Button4" type="button" value="Wydarzenia naukowe" />
-            <input id="Button5" type="button" value="Tagi Pracy" />
+            <input id="Button5" type="button" value="Targi Pracy" />
             <input id="Button6" type="button" value="Dodaj wydarzenie" />
             <input id="Button7" type="button" value="Opinia o wydarzeniu" />
             </p>
@@ -140,10 +140,12 @@
                         <img alt="" class="auto-style27" src="images/impreza.jpg" /></td>
                 </tr>
                 <tr>
-                    <td class="auto-style20">
+                    <td class="auto-style28">
                         <img alt="" class="auto-style14" src="images/naukowe.jpg" /></td>
+                    <td class="auto-style26">
+                    <img alt="" class="auto-style31" src="images/targipracy.jpg" /></td>
                 </tr>
-            </table>
+                </table>
             <div class="auto-style30">
                 Zalogowany jako: </div>
         </div>
